# womolin-core-ve-direct

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp  main.h  posix_sockets.h  testdata.txt
.github/workflows/: create-package.yml
src/: ve2mqtt.cpp  vedirect.cpp  vedirect.h
systemd/: environment  ve2mqtt@.service
